examples/test/testpolicy12683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12683
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key8: value41
      key40: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value21
          key21: value33
          key38: value48
      podSelector:
        matchLabels:
          key30: value47
          key46: value45
          key27: value28
